feat(user): all user management endpoints functional, Postman and realm updated
Implemented and verified user management endpoints: get by ID, get all, role management (add/delete), user update, and deletion.
Updated Postman collection and Keycloak realm configuration accordingly.

Refs: #29, #28, #30